Generic Module Structure
Basic Firebase Configuration
Email Firebase Authentication
Authentication Service Tested

--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,18 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Coffee Paste</title>
+  <title>Coffee Paste · Ordering coffee at work was never easier!</title>
+  <meta name="title" content="Coffee Paste · Ordering coffee at work was never easier!" />  
+  <meta name="description" content="Coffee Paste · Ordering coffee at work was never easier!" />
+  <meta name="keywords" content="Coffee, Cafe, Order, Work">
   <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+  <meta name=viewport content="width=device-width, initial-scale=1">
+  <meta name="apple-mobile-web-app-status-bar-style" content="#0D47A1">
+  <meta name="theme-color" content="#0D47A1">
+  <link rel="shortcut icon" href="/favicon.ico?v=2" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico?v=2" type="image/x-icon">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
