App Menu Progress

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,6 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <cp-root></cp-root>
+  <app-root></app-root>
 </body>
 </html>
